--- a/index.html
+++ b/index.html
@@ -30,3 +30,24 @@ src="http://upload.wikimedia.org/wikipedia/en/a/a1/NirvanaBleach.jpg"/>
 </div>
 </body>
 …
+.pagecontent {
+ width: 98%;
+ max-width: 960px;
+ margin: auto;
+}
+h1{
+ font-weight: 300;
+ font-size: 48pt;
+}
+.line{
+ width: 100%;
+ border-bottom: 2px solid #4C4C4C;
+}
+…
+<body>
+ <div class="pagecontent">
+<h1>Alben</h1>
+<div class="line"></div>
+ </div>
+</body>
+…
