--- a/index.html
+++ b/index.html
@@ -69,3 +69,42 @@ Pillow</h2>
 <li>Plastic Fantastic Lover</li>
 </ol>
 …
+…
+.image-wraper {
+ width: 25%;
+ float: left;
+}
+.cover-image {
+ max-width: 150px;
+ width: 90%;
+ padding: 5%;
+ margin: auto;
+ margin-top: 20px;
+display: block;
+}
+.text-wraper {
+ width: 74%;
+ float: right;
+ margin-top: 20px;
+ padding-bottom: 20px;
+}
+.clear{
+ clear: both;
+}
+.line.light {
+ border-bottom: 1px solid #626262;
+}
+input {
+ border: 0px;
+ background-color: transparent;
+ font-size: 48pt;
+ width: 600px;
+ font-family: "Helvetica Neue";
+ color: #444;
+ font-weight: 300;
+}
+$(document).ready(function() {
+ $("#search").keyup(function() {
+ ...
+ });
+});
